app/assets/stylesheets/department_show.css.scss
$search-color: #B1B3B3;
$home-color: #B1B3B3;
$people-color: #5B7F95;
$events-color: #9CAF88;
$rooms-color: #C26E60;
$departments-color: #E6A65D;
$map-color: #00573F;
$floor-color: #ACA39A;
$about-color: #B1B3B3;

.icon-home:after     { content: "\E805"; }
.icon-people:after     { content: "\E802"; }
.icon-departments:after      { content: "\E800"; }
.icon-events:after       { content: "\E801"; }
.icon-rooms:after { content: "\E809"; }
.icon-map:after { content: "\E804"; }
.icon-search:after { content: "\E806"; }
.icon-about:after { content: "\E803"; }

@font-face {
  font-family: 'fontello';
  src: url('fontello.eot');
  src: url('fontello.eot?#iefix') format('embedded-opentype'),
       url('fontello.woff') format('woff'),
       url('fontello.ttf') format('truetype'),
       url('fontello.svg#fontello') format('svg');
  font-weight: normal; font-style: normal;
}

[class*=" icon-"] {
  font-family: 'fontello';
  font-style: normal;
  font-size: 3em;
  speak: none;
}

#site-container {
  width: 100%;
  height: 100%;
  margin-top: 15px;
}

#map div {
  height: 35vw;
	//display: inline-block;
	//height: 480px;
	//width: 785px;
}

#mapLoading {
	font-size: 7vw;
  color: #777;
  text-align: center;
  height: 8vw;
  position: relative;

  #mapLoadingInner {
    width: 100%;

    position: absolute;
    top: 50%;
    height: 8vw;
    margin-top: -4vw;
  }
}

#map svg {
  position: absolute;
  margin: 0;
  padding: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

/* map target information pane */
#destination-view {
  visibility: none;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height: 1.1;
  text-align: center;
  width: 20%; /* Since the map is the other 75% (col-xs-9) */
  border: none;

  position: fixed;
  bottom: 100px;
  top: 100px;
  margin-bottom: 0;  right: -1000px;

  background-color: #fff;
  border-radius: 4px;
  box-shadow: 0 20px 100px 0 rgba(0,0,0,.2);
  z-index: 10;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  -moz-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition: all 0.5s cubic-bezier(0.4,0,.2,1);

  h1 {
    font-size: 3rem;
    color: gray;
  }

  h2 {
    font-size: 2rem;
    color: gray;
  }

  .replay-container {
    position: absolute;
    bottom: 20px;

    a.replay {
      cursor: pointer;
      font-size: 14px;
      font-weight: bold;
      line-height: 1;
      color: black;
      text-shadow: 0 1px 0 white;
      opacity: 0.2;
      filter: alpha(opacity=20);

      &:hover {
        text-decoration: none;
        opacity: 0.5;
        filter: alpha(opacity=50);
      }
    }
  }

  span {
    color: #333;
    font-weight: bold;
  }
}

a, a:hover, a:active {
  color: #FFF;
}

.btn-xl{
  height: 95%;
  width: 95%;
  font-size: 3.7rem;
  border-radius: 32px;
  color: white;
}

ul.horizontal-nav {
  list-style: none;
  text-align: center;
  width: 100%;
  position: relative;

  &.landing {
    margin-top: 15%;

    li {
      width: 19%;

      a {
        line-height: 10vw;
        font-size: 6vw;
        border: 0.7vw solid #fff;

        &:before {
          top: -1.5vw;
          left: -1.5vw;
          bottom: -1.5vw;
          right: -1.5vw;
        }
      }
    }
  }

  &.floors {
    span {
      text-transform: uppercase;
      color: $floor-color;
      position: absolute;
      font-size: 1.7vw;
      top: 30%;
      left: 30px;
    }

    li {
      width: 12%;

      a {
        line-height: 3.8vw;
        font-size: 2vw;
        border: 0.4vw solid #fff;

        &.active {
          box-shadow: 0 0 8px 0 rgba(0,0,0,.3);
          background-color: #5B7F95;
        }

        &:before {
          top: -0.8vw;
          left: -0.8vw;
          bottom: -0.8vw;
          right: -0.8vw;
        }
      }
    }
  }

  li {
    position: relative;
    display: inline-block;

    span {
      color: #777;
      font-size: 1.2vw;
      text-transform: uppercase;
      white-space: normal;
      position: absolute;
      left: 0;
      width: 100%;
      text-align: center;
    }

    &:before {
      content: "";
      display: block;
      width: 100%;
      height: 1px;
      padding-top: 100%;
    }

    a {
    margin: 15px;
      position: absolute;
      text-align: center;
      border-radius: 50%;
      box-shadow: 0px 3px 8px 0 rgba(0,0,0,.3);
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;

      &:before {
        content: "";
        display: block;
        background: #fff;
        border-top: 2px solid #ddd;
        position: absolute;
        z-index: -1;
        border-radius: 50%;
        box-shadow: inset 0px 8px 48px #ddd;
      }
    }

    &:hover {
      a {
        color: #eee;
        text-decoration: none;
      }
      span {
        color: #333;
      }
    }
  }
}

ul.vertical-nav {
  position: fixed;
  list-style: none;
  text-align: center;
  padding: 0 15px;
  left: 0;

  li {
    position: relative;
    margin: 5px 10px 35px;

    a {
      display: block;
      width: 80px;
      height: 80px;
      position: relative;
      text-align: center;
      line-height: 70px;
      border-radius: 50%;
      border: 7px solid #fff;
      font-size: 3em;
      box-shadow: 0px 3px 8px 0 rgba(0,0,0,.3);

      span {
        color: #777;
        text-transform: uppercase;
        white-space: normal;
        position: absolute;
        left: -50%;
        top: 90%;
        width: 200%;
        text-align: center;
        font-size: 0.3em;
      }

      &:before {
        content: "";
        display: block;
        background: #fff;
        border-top: 2px solid #ddd;
        position: absolute;
        top: -0.3em;
        left: -0.3em;
        bottom: -0.3em;
        right: -0.3em;
        z-index: -1;
        border-radius: 50%;
        box-shadow: inset 0px 8px 48px #ddd;
      }
    }

    &:hover {
      a {
        color: #eee;
        text-decoration: none;
      }
      span {
        color: #333;
      }
    }
  }
}

.btn-home {
  background-color: $home-color;
}

.btn-people {
  background-color: $people-color;
}

.btn-events {
  background-color: $events-color;
}

.btn-rooms {
  background-color: $rooms-color;
}

.btn-departments {
  background-color: $departments-color;
}

.btn-map {
  background-color: $map-color;
}

.btn-search {
  background: $search-color;
}

.btn-floor {
  background: $floor-color;
}

.btn-about {
  background: $about-color;
}

.text-home {
  color: $home-color;
}

.text-people {
  color: $people-color;
}

.text-events {
  color: $events-color;
}

.text-rooms {
  color: $rooms-color;
}

.text-departments {
  color: $departments-color;
}

.text-map {
  color: $map-color;
}

.text-search {
  color: $search-color;
}

.text-floor {
  color: $floor-color;
}

.text-about {
  color: $about-color;
}

#directory-banner {
  height: 7%;
}

h1#directory-title {
  color: gray;
  text-transform: uppercase;
  margin: 1em 0.2em;
}

ul.directory-list {
  list-style: none;
  padding: 0;

  li {
    position: relative;
    margin: 5px 20px 35px;
    float: left;
    width: 25%;
    height: 120px;

    a {
      display: block;
      text-indent:7px;
      width: 100%;
      height: 100%;
      position: relative;
      border-radius: 5px;
      box-shadow: 0px 3px 8px 0 rgba(0,0,0,.3);

      p {
        margin: 0;
        white-space: nowrap;
        width: 100%;
        overflow: hidden;
      }

      &.people-card {
        border: 7px solid $people-color;
        color: $people-color;
        h3 {
          color: $people-color;
        }
      }

      &.events-card {
        border: 7px solid $events-color;
        color: $events-color;
        h3 {
          color: $events-color;
        }
      }

      &.rooms-card {
        border: 7px solid $rooms-color;
        color: $rooms-color;
        h3 {
          color: $rooms-color;
        }
      }

      &.departments-card {
        border: 7px solid $departments-color;
        color: $departments-color;
        h3 {
          color: $departments-color;
        }
      }

      h3 {
        text-align: center;
        color: #EEE;
        text-transform: capitalize;
        font-size: 1.7rem;
        font-weight: bold;
        margin-top: 10px;
      }

      &:before {
        content: "";
        display: block;
        background: #fff;
        border-top: 2px solid #ddd;
        position: absolute;
        top: -18px;
        left: -18px;
        bottom: -18px;
        right: -18px;
        z-index: -1;
        border-radius: 5px;
        box-shadow: inset 0px 8px 48px #ddd;
      }
    }

    &:hover {
      a {
        border: 7px solid #999;
        color: #999;
        text-decoration: none;
        h3 {
          color: #999;
        }
      }
      span {
        color: #333;
      }
    }
  }
}

table#landing-buttons {
  margin-left: 10%;
  margin-top: 10%;
}

body {
  background: white;
}

/* Search interface styling below */

.right-btn-container {
  position: fixed;
  z-index: 999;
  right: 30px;

  &.search {
    top: 30px;
  }

  &.home, &.about {
    bottom: 30px;
  }

  a {
      display: block;
      width: 55px;
      height: 55px;
      position: relative;
      text-align: center;
      color: #FFF;
      line-height: 45px;
      border-radius: 50%;
      border: 5px solid #fff;
      font-size: 2em;
      box-shadow: 1px 3px 8px 0 rgba(0,0,0,.3);

      &:before {
        content: "";
        display: block;
        background: #fff;
        border-top: 2px solid #ddd;
        position: absolute;
        top: -11px;
        left: -11px;
        bottom: -11px;
        right: -11px;
        z-index: -1;
        border-radius: 50%;
        box-shadow: inset 2px 4px 20px #ddd;
      }

      &:hover {
        color: #999;
        text-decoration: none;
      }
  }
}

input.search {
  float: left;
  width: 80%;
  height: 3em;
  margin: 1em;
  margin-right: -4.5em;
  background: white;
  color: #6a5d4f;
  font-size: 1em;
  font-weight: 600;
  border-radius: 5px;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2) inset;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
  -moz-transition: all 0.25s;
  -webkit-transition: all 0.25s;
}

input.search:focus {
  outline: none;
  box-shadow: 0 -1px 1px rgba(255, 255, 255, 0.25), 0 1px 5px rgba(0, 0, 0, 0.15);
}

.floor {
    width: 15%;
}

.show-map
{
  height: 89%;
}

.admin-view
{
  padding-top: 50px;

  .alert {
    position: absolute;
    top: 0;
    width: 50%;
    visibility: hidden;
  }
}

img.building-pic {
  padding: 1px;
  border: 1px solid #021a40;
  background-color: #eee;
  width: 100%;
  margin: 2em 0;
}

